--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,21 +7,33 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
-
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TextDetectActivity" 
+            android:label="@string/text_detect"> 
+        </activity>
+        
+        
+        
+        
     </application>
 
 </manifest>
